# elliptics-awrapper

./: .gitignore  CMakeLists.txt
debian/: README.Debian  README.source  changelog  control  copyright  files
src/: wrapper.cpp  wrapper.h
